Se crea efecto de scroll

--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
           <div class="header__logo">
             <img src="img/Logo-1.png" alt="logo nucleus" />
           </div>
-
           <nav class="navegacion">
-            <a href="#" class="navegacion__link">Productos</a>
-            <a href="#" class="navegacion__link">Ofertas</a>
-            <a href="#" class="navegacion__link">Carrito</a>
-            <a href="#" class="navegacion__link">Regístrate</a>
-          </nav>
+            <a href="#apuestas" class="navegacion__link">Productos</a>
+            <a href="#ofertas" class="navegacion__link">Ofertas</a>
+            <a href="#carrito" class="navegacion__link">Carrito</a>
+            <a href="#testimonial" class="navegacion__link">Testimoniales</a>  
+          </nav>          
         </div>
 
         <div class="header__grid">
@@ -50,7 +49,7 @@
       </div>
     </header>
 
-    <main class="apuestas">
+    <main id="apuestas" class="apuestas">
       <h2 class="apuestas__heading">¿Qué ofrecemos?</h2>
       <div class="apuestas__contenedor">
         <div class="apuestas__grid">
@@ -85,7 +84,7 @@
         </div>
       </div>
     </main>
-    <section class="apuestas-en-vivo">
+    <section id="ofertas" class="apuestas-en-vivo">
       <div class="apuestas-en-vivo__contenedor">
         <h2 class="apuestas-en-vivo__heading">Ofertas Especiales</h2>
         <div class="apuestas-en-vivo__grid">
@@ -128,7 +127,7 @@
       </div>
     </section>
 
-    <section class="comisiones">
+    <section id="carrito" class="comisiones">
       <div class="comisiones__contenedor">
         <h2 class="comisiones__heading">Política de Precios</h2>
 
@@ -164,7 +163,7 @@
       </div>
     </section>
 
-    <section class="testimoniales">
+    <section id="testimonial" class="testimoniales">
       <div class="testimoniales__contenedor">
         <h2 class="testimoniales__heading">Testimoniales</h2>
 
@@ -252,5 +251,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/app.js"></script>
   </body>
 </html>
