Se agrega acordion

--- a/index.html
+++ b/index.html
@@ -113,6 +113,47 @@
         </div>
       </div>
     </section>
+    <section id="accordion">
+        <ul class="accordion">
+            <li>
+                <img src="img/img1.jpg" alt="Imagen de artículos en línea" />
+                <div class="content">
+                    <span>
+                        <h2>Zapatos</h2>
+                        <p>Zapatos para todas las ocasiones</p>
+                    </span>
+                </div>
+            </li>
+            <li>
+                <img src="img/img2.jpg" alt="Imagen de ropa" />
+                <div class="content">
+                    <span>
+                        <h2>Ropa</h2>
+                        <p>Ropa de última moda</p>
+                    </span>
+                </div>
+            </li>
+            <li>
+                <img src="img/img3.jpg" alt="Imagen de tecnología" />
+                <div class="content">
+                    <span>
+                        <h2>Tecnología</h2>
+                        <p>Los últimos gadgets y dispositivos</p>
+                    </span>
+                </div>
+            </li>
+            <li>
+                <img src="img/img4.jpg" alt="Imagen de electrodomésticos" />
+                <div class="content">
+                    <span>
+                        <h2>Alimentos</h2>
+                        <p>Facilitando tu vida en casa</p>
+                    </span>
+                </div>
+            </li>
+        </ul>
+    </section>    
+
     <section class="card-body">
       <div class="card">
         <img src="/img/Logo-1.png" />
